--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/samhoudmedia/aframe-boilerplate-webpack/issues"
   },
-  "homepage": "https://github.com/samhoudmedia/aframe-boilerplate-webpack#readme"
+  "homepage": "https://github.com/samhoudmedia/aframe-boilerplate-webpack#readme",
+  "devDependencies": {
+    "webpack": "^4.0.1"
+  }
 }
