Add webpack dev server dependency

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": " A-Frame boilerplate using Webpack. ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/samhoudmedia/aframe-boilerplate-webpack#readme",
   "devDependencies": {
     "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9"
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0"
   }
 }
