--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.0.0"
+  },
+  "dependencies": {
+    "aframe": "^0.7.1"
   }
 }
